lox-tests/tests/field/get_on_num.stderr
ERROR: Only class instances have properties
 --> 1:1
  |
1 | 123.foo; // expect runtime error: Only instances have properties.
  | ^-----^
